Refactor: inputView 당첨번호에 대한 검증 수행하도록 변경(쪼개지 못해서 전체 검증 진행 inputView#readWinningNumbers) - 이후 수정 필요